<resources>
    <string name="app_name">Flags</string>
    <string name="intro_text">Please select a game</string>
    <string name="guess_the_country">Guess the Country</string>
    <string name="guess_hints">Guess-Hints</string>
    <string name="guess_the_flag">Guess the Flag</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="timer">Timer</string>
    <string name="guess_the_country2">Guess the country:</string>
    <string name="textview6">TextView</string>
    <string name="guess_character">Guess character:</string>
    <string name="submit1">Submit</string>
    <string name="todo1">TODO</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="select_the_flag_for_the_country">Select the flag for the country:</string>
    <string name="textview4">TextView</string>
    <string name="next">Next</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="guess_the_correct_country">Guess the correct country</string>
    <string name="submit2">Submit</string>
    <string name="todo6">TODO</string>
    <string name="tod7">TODO</string>
    <string name="submit">Submit</string>
    <string name="flag_3">Flag 3</string>
    <string name="textview7">TextView</string>
    <string name="flag_2">Flag 2</string>
    <string name="textview8">TextView</string>
    <string name="flag_1">Flag 1</string>
    <string name="textview9">TextView</string>
    <string name="todo11">TODO</string>
    <string name="score">Score:</string>
    <string name="textview10">TextView</string>
    <string name="textview11">TextView</string>
    <string name="todo">TODO</string>
</resources>
